fix: UI: Fix menuitem icons not showing on Mac due to css being overwritten
(integrated from komodo (trunk) change 81556 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13507 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/menus.less
+++ b/src/chrome/komodo/skin/plat/mac/menus.less
@@ -13,14 +13,14 @@
 /* Fix menu alignment when icons are visible */
 menu, menuitem
 {
-    padding-left: 26px;
+    padding-left: 26px !important;
 
     .menu-iconic-icon:not([disabled])
     {
         /* force 16px width as some menuitems have an image element with
          * no actual image src */
         width: 16px;
-        margin-left: -21px;
+        margin-left: -21px !important;
     }
 }
 
